Notebook updates, view fixes

--- a/pymatgen/analysis/reaction_network/tests/Testing_ReNetwork.ipynb
+++ b/pymatgen/analysis/reaction_network/tests/Testing_ReNetwork.ipynb
@@ -13,7 +13,7 @@
     "from pymatgen.analysis.graphs import MoleculeGraph\n",
     "from pymatgen.analysis.local_env import OpenBabelNN\n",
     "from pymatgen.util.testing import PymatgenTest\n",
-    "from pymatgen.analysis.reaction_network import ReactionNetwork\n",
+    "from pymatgen.analysis.reaction_network.reaction_network import ReactionNetwork\n",
     "from pymatgen.analysis.fragmenter import Fragmenter, metal_edge_extender\n",
     "from pymatgen.entries.mol_entry import MoleculeEntry\n",
     "from monty.serialization import loadfn\n",
@@ -27,17 +27,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_toolkit import view"
+    "from crystal_toolkit.helpers.pythreejs_renderer import view_old"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "reextended_entries = []\n",
-    "entries = loadfn(\"/Users/samuelblau/pymatgen/test_files/reaction_network_files/LiEC_reextended_entries.json\")\n",
+    "entries = loadfn(\"../../../../test_files/reaction_network_files/LiEC_reextended_entries.json\")\n",
     "for entry in entries:\n",
     "    if \"optimized_molecule\" in entry[\"output\"]:\n",
     "        mol = entry[\"output\"][\"optimized_molecule\"]\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,10 @@
      "text": [
       "682 input entries\n",
       "677 connected entries\n",
-      "569 unique entries\n"
+      "569 unique entries\n",
+      "Missing H3O+, will not add concerted water splitting rxn1\n",
+      "Adding concerted water splitting rxn2: 2H2O + 2e- -> H2 + 2OH-\n",
+      "Water rxn2 free energy = 0.9488610461256028\n"
      ]
     }
    ],
@@ -75,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,28 +95,28 @@
    ],
    "source": [
     "EC_mg =  MoleculeGraph.with_local_env_strategy(\n",
-    "    Molecule.from_file(\"/Users/samuelblau/pymatgen/test_files/reaction_network_files/EC.xyz\"),\n",
+    "    Molecule.from_file(\"../../../../test_files/reaction_network_files/EC.xyz\"),\n",
     "    OpenBabelNN(),\n",
     "    reorder=False,\n",
     "    extend_structure=False)\n",
     "EC_mg = metal_edge_extender(EC_mg)\n",
     "\n",
     "LiEC_mg =  MoleculeGraph.with_local_env_strategy(\n",
-    "    Molecule.from_file(\"/Users/samuelblau/pymatgen/test_files/reaction_network_files/LiEC.xyz\"),\n",
+    "    Molecule.from_file(\"../../../../test_files/reaction_network_files/LiEC.xyz\"),\n",
     "    OpenBabelNN(),\n",
     "    reorder=False,\n",
     "    extend_structure=False)\n",
     "LiEC_mg = metal_edge_extender(LiEC_mg)\n",
     "\n",
     "LEDC_mg =  MoleculeGraph.with_local_env_strategy(\n",
-    "    Molecule.from_file(\"/Users/samuelblau/pymatgen/test_files/reaction_network_files/LEDC.xyz\"),\n",
+    "    Molecule.from_file(\"../../../../test_files/reaction_network_files/LEDC.xyz\"),\n",
     "    OpenBabelNN(),\n",
     "    reorder=False,\n",
     "    extend_structure=False)\n",
     "LEDC_mg = metal_edge_extender(LEDC_mg)\n",
     "\n",
     "LEMC_mg =  MoleculeGraph.with_local_env_strategy(\n",
-    "    Molecule.from_file(\"/Users/samuelblau/pymatgen/test_files/reaction_network_files/LEMC.xyz\"),\n",
+    "    Molecule.from_file(\"../../../../test_files/reaction_network_files/LEMC.xyz\"),\n",
     "    OpenBabelNN(),\n",
     "    reorder=False,\n",
     "    extend_structure=False)\n",
@@ -150,44 +153,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b66855924b64eaeb088351c11df4b8b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(background='white', camera=OrthographicCamera(bottom=-7.157637461399999, left=-7.157637461399999, nea…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
+     "ename": "NameError",
+     "evalue": "name 'view' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-0acd17bcc55d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m395\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mview\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mentries_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mind\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmolecule\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbonding_strategy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"OpenBabelNN\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mentries_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mind\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcharge\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mRN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mentries_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mind\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfree_energy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'view' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-9293.270114374945"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "ind=395\n",
-    "view(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "view_old(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
     "print(RN.entries_list[ind].charge)\n",
     "RN.entries_list[ind].free_energy"
    ]
@@ -233,7 +216,7 @@
    ],
    "source": [
     "ind=452\n",
-    "view(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "view_old(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
     "print(RN.entries_list[ind].charge)\n",
     "RN.entries_list[ind].free_energy"
    ]
