--- a/pymatgen/analysis/reaction_network/tests/Testing_Network.ipynb
+++ b/pymatgen/analysis/reaction_network/tests/Testing_Network.ipynb
@@ -53,9 +53,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8516 input entries\n",
+      "7161 connected entries\n",
+      "5927 unique entries\n",
+      "Missing H3O+, will not add concerted water splitting rxn1\n",
+      "Adding concerted water splitting rxn2: 2H2O + 2e- -> H2 + 2OH-\n",
+      "Water rxn2 free energy = 0.9484209174741407\n"
+     ]
+    }
+   ],
    "source": [
     "# RN = ReactionNetwork(prod_entries)\n",
     "RN = loadfn(\"prod_RN.json\")\n",
@@ -64,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,13 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d68a830693d4cf2ac5b10549cfc15ce",
+       "model_id": "5b2ecc309bf0424188c33a8b3ada2924",
        "version_major": 2,
        "version_minor": 0
       },
@@ -183,21 +196,21 @@
        "-12018.648253254347"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ind=1631\n",
-    "view(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "view_old(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
     "print(RN.entries_list[ind].charge)\n",
     "RN.entries_list[ind].free_energy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,13 +338,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "254f450071cd442ca3e724749ab61c62",
+       "model_id": "71aae023baef42459e895121a4247cf9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -355,14 +368,14 @@
        "-12220.688743195993"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ind=1568\n",
-    "view(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "view_old(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
     "print(RN.entries_list[ind].charge)\n",
     "RN.entries_list[ind].free_energy"
    ]
@@ -375,7 +388,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52a7149de6c849d4a5f0d53af4304ccf",
+       "model_id": "1671020cb4fc4195aa7aa5d830dcd89d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -406,14 +419,14 @@
    ],
    "source": [
     "ind=1571\n",
-    "view(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "view_old(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
     "print(RN.entries_list[ind].charge)\n",
     "RN.entries_list[ind].free_energy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -648,18 +661,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee6ebabebcfd4917a9b8aaaa1741e01f",
+       "model_id": "c0a104bb55c94f8f8dbfa9d7bce2e1a3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Renderer(background='white', camera=OrthographicCamera(bottom=-6.24992712288, left=-6.24992712288, near=-2000.…"
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-6.179342544599999, left=-6.179342544599999, nea…"
       ]
      },
      "metadata": {},
@@ -675,25 +688,78 @@
     {
      "data": {
       "text/plain": [
-       "-12223.462907143024"
+       "-12222.705825421639"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ind=1553\n",
-    "view(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "ind=1566\n",
+    "view_old(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
     "print(RN.entries_list[ind].charge)\n",
     "RN.entries_list[ind].free_energy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fb5c6792b9004befa9797b69d1d1ca59",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-4.777487102639999, left=-4.777487102639999, nea…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "view_old(RN.entries[\"C3 F1 H3 Li1 O3\"][12][0][0].molecule,bonding_strategy=\"OpenBabelNN\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MoleculeEntry 135896 - C3 F1 H3 Li1 O3 - E12 - C0\n",
+       "Energy = -449.2236 Hartree\n",
+       "Correction = 0.0000 Hartree\n",
+       "Enthalpy = 47.3820 kcal/mol\n",
+       "Entropy = 83.0950 cal/mol.K\n",
+       "Free Energy = -12223.0190 eV\n",
+       "Parameters:\n",
+       "ind = 1571"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RN.entries[\"C3 F1 H3 Li1 O3\"][12][0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -766,13 +832,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd5b28be6fa44c21a0e1ba3266029faf",
+       "model_id": "959a4596a31040e6bfba582c150aa735",
        "version_major": 2,
        "version_minor": 0
       },
@@ -796,73 +862,159 @@
        "-12224.112436332718"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ind=1565\n",
-    "view(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "view_old(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
     "print(RN.entries_list[ind].charge)\n",
     "RN.entries_list[ind].free_energy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d80d357a0a464bbfb8a589967fea0d6e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-7.426678041599999, left=-7.426678041599999, nea…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-12223.857551716179"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ind=1564\n",
+    "view_old(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "print(RN.entries_list[ind].charge)\n",
+    "RN.entries_list[ind].free_energy"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[MoleculeEntry 135896 - C3 F1 H3 Li1 O3 - E12 - C0\n",
+       " Energy = -449.2236 Hartree\n",
+       " Correction = 0.0000 Hartree\n",
+       " Enthalpy = 47.3820 kcal/mol\n",
+       " Entropy = 83.0950 cal/mol.K\n",
+       " Free Energy = -12223.0190 eV\n",
+       " Parameters:\n",
+       " ind = 1571]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RN.entries[\"C3 F1 H3 Li1 O3\"][12][0]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MoleculeEntry 136447 - C3 F1 H3 Li1 O3 - E11 - C0\n",
+       "Energy = -449.2492 Hartree\n",
+       "Correction = 0.0000 Hartree\n",
+       "Enthalpy = 46.3570 kcal/mol\n",
+       "Entropy = 90.6470 cal/mol.K\n",
+       "Free Energy = -12223.8576 eV\n",
+       "Parameters:\n",
+       "ind = 1564"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RN.entries_list[1564]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "09c3b6f0bcbd45688a6c568c29869aef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-4.777487102639999, left=-4.777487102639999, nea…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-12223.018963532839"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ind=1571\n",
+    "view_old(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "print(RN.entries_list[ind].charge)\n",
+    "RN.entries_list[ind].free_energy"
+   ]
   },
   {
    "cell_type": "code",
